[package]
name = "rustness_cloud"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics"
]
