[package]
name = "rustness_cloud"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7.4", features = ["mysql", "runtime-async-std"] }

[dependencies.uuid]
version = "1.8.0"
features = ["v4", "fast-rng", "macro-diagnostics"]

[dependencies.mongodb]
version = "3.0.1"
features = ["sync"]
